# pixspector

./: .gitignore  CHANGELOG.md  README.md  pixspector_gui.spec  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: tests.yml
config/: defaults.yaml
docs/: CLI_GUIDE.md  IMPROVEMENTS_SUMMARY.md  TROUBLESHOOTING.md  UI_CLI_ENHANCEMENTS.md  architecture.md
examples/sample_images/: make_samples.py
schemas/: image_authenticity_report.schema.json
scripts/: build_app.sh  build_app_win.bat  install_deps.sh  run_example.sh
src/cv2/: __init__.py
src/pixspector/: __init__.py  branding.py  cli.py  config.py  pipeline.py
src/pixspector/analysis/: ai_detection.py  cfa.py  dct_benford.py  ela.py  fft_checks.py  jpeg_ghosts.py  prnu.py  resampling.py  watermark.py
src/pixspector/api/: __init__.py  app.py  job_store.py
src/pixspector/core/: c2pa.py  evidence.py  image_io.py  metadata.py  sandbox.py
src/pixspector/decision/: __init__.py  policy.py
src/pixspector/gui/: app.py
src/pixspector/report/: report.py
src/pixspector/report/templates/: report_template.md  style.css
src/pixspector/scoring/: rules.py
src/pixspector/utils/: blocks.py  logging.py  visuals.py
tests/: test_ai_detection.py  test_cli.py  test_ela.py  test_resampling.py  test_rules.py
